Переход на single-activity: удалены AuthActivity.kt и LoanActivity.kt. Осталась MainActivity.kt в модуле core. Добавлена проверка на авторизацию пользователя в LoginFragment.kt - при наличии токена открывается главный фрагмент feature-loan.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoanApp">
         <activity
-            android:name="com.focusstart.loanapp.features.auth.ui.AuthActivity"
+            android:name="com.focusstart.loanapp.core.ui.MainActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"
             android:label="@string/app_name">
             <intent-filter>
