--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation 'com.google.dagger:hilt-android:2.30.1-alpha'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
     kapt 'com.google.dagger:hilt-android-compiler:2.30.1-alpha'
     testImplementation 'junit:junit:4.13.1'
