--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:name="com.focusstart.loanapp.core.ui.MainActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"
             android:label="@string/app_name">
+            <nav-graph android:value="@navigation/nav_graph" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
